--- a/notebooks/shape_classifier.ipynb
+++ b/notebooks/shape_classifier.ipynb
@@ -64,7 +64,7 @@
     "    def __init__(self):\n",
     "        super(SimpleCNN, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 16, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 32, kernel_size=3, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(16, 32, kernel_size=3, padding=1) #bug 1\n",
     "        self.fc1 = nn.Linear(32 * 16 * 16, 128)\n",
     "        self.fc2 = nn.Linear(128, 3)  # 3 classes: circle, triangle, rectangle\n",
     "        \n",
@@ -108,7 +108,7 @@
     "            total += labels.size(0)\n",
     "            correct += (predicted == labels).sum().item()\n",
     "        \n",
-    "        accuracy = 0 * correct / total\n",
+    "        accuracy = 100 * correct / total #bug 2\n",
     "        print(f'Epoch [{epoch+1}/{epochs}], Loss: {running_loss/len(train_loader):.4f}, Accuracy: {accuracy:.2f}%')\n"
    ]
   },
@@ -148,7 +148,42 @@
     "def test(model, test_loader):\n",
     "    \"\"\"Print the Precision, Recall and F1-score for the trained model\n",
     "    \"\"\"\n",
-    "    pass"
+    "    \n",
+    "    from sklearn.metrics import precision_recall_fscore_support, accuracy_score\n",
+    "\n",
+    "    # Set the model to evaluation mode\n",
+    "    model.eval()\n",
+    "\n",
+    "    all_predictions = []\n",
+    "    all_targets = []\n",
+    "\n",
+    "    # Evaluate on test data\n",
+    "    with torch.no_grad():\n",
+    "        for batch_images, batch_labels in test_loader:\n",
+    "            batch_images, batch_labels = batch_images.to(device), batch_labels.to(device)\n",
+    "            outputs = model(batch_images)\n",
+    "            _, preds = torch.max(outputs, 1)\n",
+    "\n",
+    "            all_predictions.extend(preds.cpu().numpy())\n",
+    "            all_targets.extend(batch_labels.cpu().numpy())\n",
+    "\n",
+    "    # Compute metrics\n",
+    "    precision, recall, f1, _ = precision_recall_fscore_support(all_targets, all_predictions, average=None)\n",
+    "    acc = accuracy_score(all_targets, all_predictions)\n",
+    "\n",
+    "    # Print results per class\n",
+    "    print(\"Result:\")\n",
+    "    for idx, cls_name in enumerate(test_loader.dataset.classes):\n",
+    "        print(f\"{cls_name}:\")\n",
+    "        print(f\"  Precision: {precision[idx]:.4f}\")\n",
+    "        print(f\"  Recall:    {recall[idx]:.4f}\")\n",
+    "        print(f\"  F1-score:  {f1[idx]:.4f}\")\n",
+    "\n",
+    "    print(f\"\\nOverall Accuracy: {acc:.4f}\")\n",
+    "    \n",
+    "    pass\n",
+    "\n",
+    "test(model, test_loader)"
    ]
   },
   {
@@ -170,13 +205,56 @@
     "    \"\"\"Pass the image to the model and overlay the predicted shape and confidence on the input\n",
     "    image and display it\n",
     "    \"\"\"\n",
-    "    pass"
+    "    import matplotlib.pyplot as plt\n",
+    "    import numpy as np\n",
+    "\n",
+    "    # Convert numpy array to tensor if needed\n",
+    "    if isinstance(image, np.ndarray):\n",
+    "        image = torch.tensor(image, dtype=torch.float32)\n",
+    "\n",
+    "    # Ensure batch and channel dimensions\n",
+    "    if len(image.shape) == 2:        # H x W\n",
+    "        image = image.unsqueeze(0).unsqueeze(0)\n",
+    "    elif len(image.shape) == 3:      # C x H x W\n",
+    "        image = image.unsqueeze(0)\n",
+    "\n",
+    "    # Normalize the image like during training\n",
+    "    image = (image / 255.0 - 0.5) / 0.5\n",
+    "    image = image.to(device)\n",
+    "\n",
+    "    # Forward pass\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(image)\n",
+    "        probs = F.softmax(outputs, dim=1)\n",
+    "        confidence, pred = torch.max(probs, 1)\n",
+    "\n",
+    "    class_name = test_loader.dataset.classes[pred.item()]\n",
+    "\n",
+    "    # Display image with prediction overlay\n",
+    "    plt.figure(figsize=(6,6))\n",
+    "    img_display = image[0,0].cpu().numpy()\n",
+    "    plt.imshow(img_display, cmap='gray')\n",
+    "    plt.axis('off')\n",
+    "    plt.text(\n",
+    "        5, 10,\n",
+    "        f\"{class_name} ({confidence.item():.2%})\",\n",
+    "        color='red',\n",
+    "        fontsize=14,\n",
+    "        bbox=dict(facecolor='white', alpha=0.7, edgecolor='red', boxstyle='round,pad=0.3')\n",
+    "    )\n",
+    "    plt.show()\n",
+    "    \n",
+    "    pass\n",
+    "\n",
+    "test_images, test_labels = next(iter(test_loader))\n",
+    "show_prediction(model, test_images[0])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -190,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
